@@ -289,6 +289,7 @@ ai_worker_requirement_percent = 150
 ;   AI CAN SACRIFICE WITHOUT SPECIAL ABILITY -- The base game function that gates the AI's ability to sacrifice units does not check whether the unit
 ; in question has the sacrifice special ability set on its type. Thus, AIs are allowed to sacrifice any captured units as long as they have the
 ; required tech. The mod fixes this by patching the gating function to insert the missing condition.
+;   CRASH IN LEADER UNIT AI -- The base game's AI routine for leader units may crash due to uninitialized variables.
 
 patch_submarine_bug = true
 patch_science_age_bug = true
@@ -305,6 +306,7 @@ patch_empty_army_movement = true
 patch_premature_truncation_of_found_paths = true
 patch_zero_production_crash = true
 patch_ai_can_sacrifice_without_special_ability = true
+patch_crash_in_leader_unit_ai = true
 
 ; At the beginning of each AI player's turn, deletes any units of theirs that are not on a valid tile. This addresses a rare crash that can occur when
 ; the unit AI invokes the pathfinder for an off-map unit. I don't know how AI units can end up off the map in the first place.
